# udp_splice

./: .gitignore  Makefile.am  README.md  configure.ac  udp_splice.pc.in
examples/: .gitignore  Makefile.am  udprelay.c
include/: Makefile.am  libudp_splice.h  udp_splice.h
src/: Kbuild  Makefile.am  libudp_splice.c  udp_splice.c
